# Hatrix

./: README.md
final-project/: CHANGELOG.md  final-project.cabal
final-project/app/Project/: Ultimatum.hs  matrixA.txt
